--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body, html {
 	}
 }
 
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
   position: relative;
   opacity: 0.8;
   background-attachment: fixed;
@@ -91,6 +91,10 @@ body, html {
 .bgimg-4 {
   background-image: url("slike/naslovna31.jpg");
   min-height: 200px;
+}
+.bgimg-5 {
+  background-image: url("slike/naslovna31.jpg");
+  min-height: 300px;
 }
 
 .caption {
